--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,6 +20,7 @@
     "strict": true,
     "allowJs": true,
     "skipLibCheck": true,
+    "verbatimModuleSyntax": true,
     "forceConsistentCasingInFileNames": true,
     "baseUrl": ".",
     "paths": {
